--- a/README
+++ b/README
@@ -1,8 +1,10 @@
+Цель игры - переставить ячейки таким образом, чтоб получилась комбинация из трех и более одинаковых элементов в ряд (вертикальный или горизонтальный), либо крест из 5 элементов.
+
 В корневой папке проекта выполните команду
 
 ```python3 main.py```
 
 Введите имя игрока.
-Вводите ход в формате `первая ячейка` `вторая ячейка` которые надо поменять.
+Вводите ход в формате `первая ячейка a1` `вторая ячейка a2` которые надо поменять.
 
 Для выхода введите `Q`
